# matrix

./: CMakeLists.txt  bash_scrypt
include/: matrix.h
src/: main  main.cpp
test/: a.out  matrix_unit_test.cpp  test_gener.cpp
